--- a/dona_front/package.json
+++ b/dona_front/package.json
@@ -16,6 +16,7 @@
     "aos": "^2.3.4",
     "axios": "^1.10.0",
     "bootstrap-icons": "^1.13.1",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
