--- a/dona_front/package.json
+++ b/dona_front/package.json
@@ -10,13 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@esbuild/win32-x64": "^0.25.8",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.3",
     "aos": "^2.3.4",
     "axios": "^1.10.0",
     "bootstrap-icons": "^1.13.1",
+    "esbuild": "^0.25.8",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -35,6 +35,6 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
-    "vite": "^4.5.2"
+    "vite": "^7.0.6"
   }
 }
